--- a/courses/german.html
+++ b/courses/german.html
@@ -188,6 +188,8 @@
                     <h2>Learn German from basics.</h2>
                     <h6><p>Hallo Kumpels!! Have you ever wanted to have a German tutor at close proximity? With LearnYuva’s interactive live sessions establish confidence and learn as our faculty guides you on this path of learning German, all of this from the comfort of your home.
                     </p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/germanLogo.jpg">
@@ -220,8 +222,6 @@
             <a class="footer-link" href="https://www.facebook.com/learnyuva"><i class="fa-fw fab fa-facebook fa-lg"></i></a>
             <a class="footer-link" href="https://www.instagram.com/learnyuva"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
             <a class="footer-link" href="https://www.linkedin.com/company/learnyuva/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
-            <a class="footer-link" href="mailto:contact.learnyuva@gmail.com"><i class="fa-fw fas fa-envelope fa-lg"></i></a>
-            <a class="footer-link" href=""><i class="fa-fw fas fa-comment-alt fa-lg"></i></a>
           </div>
         </div>
       </div>
