--- a/courses/ios.html
+++ b/courses/ios.html
@@ -189,6 +189,8 @@
                     <h2>iOS App-Development for Beginners</h2>
                     <h6><p>Are you passionate about the versions of iOS being released? We bring to you the opportunity to learn how to develop apps for iOS and contribute towards helping to build diversity in the app store.
                     </p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/iosLogo.jpg">
