--- a/courses/iot.html
+++ b/courses/iot.html
@@ -188,6 +188,8 @@
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Step into the field of IoT.</h2>
                     <h6><p>Don’t miss out on the opportunity to build a secure, intelligent platform on the internet. Dive into the amazing world of IOT through our live sessions and understand how beautifully Internet Of Things brings everything together.</p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/iotLogo.jpg">
