--- a/courses/python.html
+++ b/courses/python.html
@@ -188,6 +188,8 @@
                     <h2>Let's start coding in Python</h2>
                     <h6><p>Want to learn the easiest method to interact with computers and learn their language? Commence this course on the 'glue' language to acquire your basic coding skills in the most interactive manner.
                     </p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/pythonLogo.png">
