--- a/courses/robotics.html
+++ b/courses/robotics.html
@@ -189,6 +189,8 @@
                     <h2>Step into the field of IoT.</h2>
                     <h6><p>Are you flabbergasted by a humanoid and want to build one but worried about where to start with? Fret no further as LearnYuva is one click apart from guiding you through engrossing lectures with interactive live sessions.
                     </p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/roboticsLogo.jpg">
