--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -189,6 +189,8 @@
                     <h2>Learn Spanish from basics.</h2>
                     <h6><p> Get the hang of using one of the world’s most phonetic languages, also the second most used language in the world , by live online sessions. We will aid you in gaining mastery over Spanish with our careful guidance suited to your needs.
                     </p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/spanishLogo.jpg">
