--- a/courses/web.html
+++ b/courses/web.html
@@ -189,6 +189,8 @@
                     <h2>Web-Development for Beginners</h2>
                     <h6><p>Have you ever looked at a website and wondered how it was created? Well, look no further than our course. Learn to design websites both beautiful and complex, sites that are easy to navigate and a joy to peruse. Learn this invaluable skill with our online classes and careful guidance.
                     </p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/webLogo.png">
