--- a/courses/dm.html
+++ b/courses/dm.html
@@ -231,6 +231,7 @@
             <a class="footer-link" href="https://www.linkedin.com/company/learnyuva/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
         </div>
       </div>
+      </div>
       <div class="row">
         <div class="col-12 text-center">
           <p>
