Language Page added.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             Eliminate the concern of communication barrier in any foreign country by learning to speak various languages with ease.
           </p>
             <br>
-          <button type="button" class="btn btn-outline-primary">View Courses</button>
+          <a href="courses/lang.html"><button type="button" class="btn btn-outline-primary">View Courses</button></a>
         </div>
       </div>
 
@@ -277,7 +277,7 @@
               Take a step towards advancement by acquiring the skills of Web Development, App Development and iOS Development and learn the languages of computers to be industry ready.
           </p>
             <br>
-          <button type="button" class="btn btn-outline-primary">View Courses</button>
+          <a href=""><button type="button" class="btn btn-outline-primary">View Courses</button></a>
         </div>
       </div>
       <hr class="divider">
@@ -291,7 +291,7 @@
              Familiarize yourself with concept of Internet of Things, Robotics, Drone Making etc. which will help you embark on your journey towards triumph.
           </p>
             <br>
-          <button type="button" class="btn btn-outline-primary">View Courses</button>
+          <a href=""><button type="button" class="btn btn-outline-primary">View Courses</button></a>
         </div>
       </div>
       <hr class="divider">
@@ -305,7 +305,7 @@
          Understanding the marketing strategies and a spectrum of tactics that fall under umbrella of Digital Marketing.
           </p>
             <br>
-          <button type="button" class="btn btn-outline-primary">View Courses</button>
+          <a href=""><button type="button" class="btn btn-outline-primary">View Courses</button></a>
         </div>
       </div>
     </div>
