Fixed different size of Cards Issue

--- a/courses/lang.html
+++ b/courses/lang.html
@@ -97,7 +97,7 @@
       <div class="row">
           <div class="col-md-6 col-lg-4 col-12">
             <div class="card">
-                <img class="card-img-top" src="../Assets/Images/spanishLogo.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../Assets/Images/spanishLogo.jpg" height="210px" alt="Card image cap">
                 <div class="card-body">
                     <h4 class="card-title">
                         LearnYuva's Spanish Course.
@@ -111,7 +111,7 @@
           </div>
           <div class="col-md-6 col-lg-4 col-12">
             <div class="card">
-                <img class="card-img-top" src="../Assets/Images/spanishLogo.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../Assets/Images/frenchlogo.png" height="210px" alt="Card image cap">
                 <div class="card-body">
                     <h4 class="card-title">
                         LearYuva's French Course.
@@ -125,7 +125,7 @@
           </div>
           <div class="col-md-6 col-lg-4 col-12">
             <div class="card">
-                <img class="card-img-top" src="../Assets/Images/spanishLogo.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../Assets/Images/germanLogo.jpg" height="210px" alt="Card image cap">
                 <div class="card-body">
                     <h4 class="card-title">
                         LearnYuva's German Course.
