Technical Section added.

--- a/courses/tech.html
+++ b/courses/tech.html
@@ -92,11 +92,95 @@
     </div>
   </nav>
   
-  <div class="container">
+  <div class="container courses-page">
+      <h2 class="text-center">The Technical Courses from LearnYuva are</h2>
       <div class="row">
-      </div>
+          <div class="col-md-6 col-lg-4 col-12">
+            <div class="card">
+                <img class="card-img-top course-icon" src="../Assets/Images/webLogo.png" height="210px" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        LearnYuva's Web Dev Course.
+                    </h4>
+                    <p class="card-text">
+                        Have you ever looked at a website and wondered how it was created ?
+                    </p>
+                    <a href="web.html" class="btn btn-primary">View Course</a>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 col-12">
+            <div class="card">
+                <img class="card-img-top course-icon" src="../Assets/Images/appLogo.jpg" height="210px" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        LearYuva's App Dev Course.
+                    </h4>
+                    <p class="card-text">
+                        Learn to create android apps effortlessly from our live course.
+                    </p>
+                    <a href="app.html" class="btn btn-primary">View Course</a>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 col-12">
+            <div class="card">
+                <img class="card-img-top course-icon" src="../Assets/Images/iosLogo.jpg" height="210px" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        LearnYuva's iOS Dev Course.
+                    </h4>
+                    <p class="card-text">
+                        Are you passionate about the versions of iOS being released?
+                    </p>
+                    <a href="ios.html" class="btn btn-primary">View Course</a>
+                </div>
+            </div>
+          </div>
+        <div class="col-md-6 col-lg-4 col-12">
+          <div class="card">
+              <img class="card-img-top course-icon" src="../Assets/Images/c++Logo.png" height="300px" alt="Card image cap">
+              <div class="card-body">
+                  <h4 class="card-title">
+                      LearnYuva's C++ Course.
+                  </h4>
+                  <p class="card-text">
+                      Get the hang of using one of the world’s most phonetic language.
+                  </p>
+                  <a href="c++.html" class="btn btn-primary">View Course</a>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-12">
+          <div class="card">
+              <img class="card-img-top course-icon" src="../Assets/Images/javaLogo.png" height="300px" alt="Card image cap">
+              <div class="card-body">
+                  <h4 class="card-title">
+                      LearYuva's Java Course.
+                  </h4>
+                  <p class="card-text">
+                      Learn the language of love and amazing culture & traditions.
+                  </p>
+                  <a href="java.html" class="btn btn-primary">View Course</a>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-12">
+          <div class="card">
+              <img class="card-img-top course-icon" src="../Assets/Images/pythonLogo.png" height="300px" alt="Card image cap">
+              <div class="card-body">
+                  <h4 class="card-title">
+                      LearnYuva's Python Course.
+                  </h4>
+                  <p class="card-text">
+                      Have you ever wanted to have a German tutor at close proximity?
+                  </p>
+                  <a href="python.html" class="btn btn-primary">View Course</a>
+              </div>
+          </div>
+        </div>
+    </div>
   </div>
-
 
   <div class="bottom-container">
     <div class="container my-auto">
