--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               Take a step towards advancement by acquiring the skills of Web Development, App Development and iOS Development and learn the languages of computers to be industry ready.
           </p>
             <br>
-          <a href=""><button type="button" class="btn btn-outline-primary">View Courses</button></a>
+          <a href="courses/tech.html"><button type="button" class="btn btn-outline-primary">View Courses</button></a>
         </div>
       </div>
       <hr class="divider">
@@ -291,7 +291,7 @@
              Familiarize yourself with concept of Internet of Things, Robotics, Drone Making etc. which will help you embark on your journey towards triumph.
           </p>
             <br>
-          <a href=""><button type="button" class="btn btn-outline-primary">View Courses</button></a>
+          <a href="courses/elec.html"><button type="button" class="btn btn-outline-primary">View Courses</button></a>
         </div>
       </div>
       <hr class="divider">
@@ -305,7 +305,7 @@
          Understanding the marketing strategies and a spectrum of tactics that fall under umbrella of Digital Marketing.
           </p>
             <br>
-          <a href=""><button type="button" class="btn btn-outline-primary">View Courses</button></a>
+          <a href="courses/dm.html"><button type="button" class="btn btn-outline-primary">View Courses</button></a>
         </div>
       </div>
     </div>
