--- a/courses/elec.html
+++ b/courses/elec.html
@@ -93,47 +93,33 @@
   </nav>
   
   <div class="container courses-page">
-      <h2 class="text-center">The Language Courses from LearnYuva are</h2>
+      <h2 class="text-center">The IOT Courses from LearnYuva are</h2>
       <div class="row">
-          <div class="col-md-6 col-lg-4 col-12">
+          <div class="col-md-6 col-lg-4 col-12 offset-lg-2">
             <div class="card">
-                <img class="card-img-top" src="../Assets/Images/spanishLogo.jpg" height="210px" alt="Card image cap">
+                <img class="card-img-top" src="../Assets/Images/iotLogo.jpg" height="210px" alt="Card image cap">
                 <div class="card-body">
                     <h4 class="card-title">
-                        LearnYuva's Spanish Course.
+                        LearnYuva's IOT Course.
                     </h4>
                     <p class="card-text">
-                        Get the hang of using one of the world’s most phonetic language.
+                        Don’t miss out on the opportunity to build a secure, intelligent platform on the internet.
                     </p>
-                    <a href="spanish.html" class="btn btn-primary">View Course</a>
+                    <a href="iot.html" class="btn btn-primary">View Course</a>
                 </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 col-12">
             <div class="card">
-                <img class="card-img-top" src="../Assets/Images/frenchlogo.png" height="210px" alt="Card image cap">
+                <img class="card-img-top" src="../Assets/Images/roboticsLogo.jpg" height="210px" alt="Card image cap">
                 <div class="card-body">
                     <h4 class="card-title">
-                        LearYuva's French Course.
+                        LearYuva's Robotics Course.
                     </h4>
                     <p class="card-text">
-                        Learn the language of love and amazing culture & traditions.
+                        Are you flabbergasted by a humanoid and want to build one but worried where to start with?
                     </p>
-                    <a href="french.html" class="btn btn-primary">View Course</a>
-                </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-12">
-            <div class="card">
-                <img class="card-img-top" src="../Assets/Images/germanLogo.jpg" height="210px" alt="Card image cap">
-                <div class="card-body">
-                    <h4 class="card-title">
-                        LearnYuva's German Course.
-                    </h4>
-                    <p class="card-text">
-                        Have you ever wanted to have a German tutor at close proximity?
-                    </p>
-                    <a href="german.html" class="btn btn-primary">View Course</a>
+                    <a href="robotics.html" class="btn btn-primary">View Course</a>
                 </div>
             </div>
           </div>
