Disabled buttons on not- available courses.

--- a/courses/app.html
+++ b/courses/app.html
@@ -191,7 +191,7 @@
                     <h6><p>Learn to create android apps effortlessly from our live online course. Train with us to become an amazing app developer, harness tools to help you become the best as you learn one of the most coveted skills of the industry.
                     </p></h6>
                   <br>
-                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
+                    <button type="button" class="btn btn-primary btn-lg" disabled title ="This course is not available right now" >Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                   <br>
