--- a/courses/dm.html
+++ b/courses/dm.html
@@ -190,7 +190,7 @@
                     <h6><p>With the right use of internet, you will now be able to expand your horizon and gain new exposure for your business. Learn tactics to help widen your customer base with ease and come out ahead in this competitive world.
                     </p></h6>
                   <br>
-                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
+                    <button type="button" class="btn btn-primary btn-lg" disabled title ="This course is not available right now" >Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                   <br>
