--- a/courses/iot.html
+++ b/courses/iot.html
@@ -189,7 +189,7 @@
                     <h2>Step into the field of IoT.</h2>
                     <h6><p>Don’t miss out on the opportunity to build a secure, intelligent platform on the internet. Dive into the amazing world of IOT through our live sessions and understand how beautifully Internet Of Things brings everything together.</p></h6>
                   <br>
-                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
+                    <button type="button" class="btn btn-primary btn-lg" disabled title ="This course is not available right now" >Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                   <br>
