--- a/courses/java.html
+++ b/courses/java.html
@@ -189,7 +189,7 @@
                     <h6><p>Feed the code to your techie soul. Make your journey through the land of computers with our course on the most versatile language and learn to communicate with computers fluently.
                     </p></h6>
                   <br>
-                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
+                    <button type="button" class="btn btn-primary btn-lg" disabled title ="This course is not available right now" >Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                   <br>
