--- a/courses/tech.html
+++ b/courses/tech.html
@@ -145,7 +145,7 @@
                       LearnYuva's C++ Course.
                   </h4>
                   <p class="card-text">
-                     Ever wish you knew how to code? Learn C++ from scratch. 
+                     Ever wish you knew how to code? Don't worry we will teach you C++ from scratch. 
                   </p>
                   <a href="c++.html" class="btn btn-primary">View Course</a>
               </div>
