--- a/courses/french.html
+++ b/courses/french.html
@@ -191,7 +191,7 @@
                     <h6><p>Learn the language of love and culture with our course. Study intricate and amazing traditions of the French and understand the renaissance and its impact on the world as you acquire fluency with the language.  
                     </p></h6>
                   <br>
-                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
+                   <a href="https://rzp.io/l/8Aw6js5"> <button type="button" class="btn btn-primary btn-lg">Enroll Now</button> </a> 
                 </div>
                 <div class="col-sm-6 col-12">
                   <br>
