Added Payment for German & Spanish

--- a/courses/german.html
+++ b/courses/german.html
@@ -189,7 +189,9 @@
                     <h6><p>Hallo Kumpels!! Have you ever wanted to have a German tutor at close proximity? With LearnYuva’s interactive live sessions establish confidence and learn as our faculty guides you on this path of learning German, all of this from the comfort of your home.
                     </p></h6>
                   <br>
+                  <a href="https://rzp.io/l/JisCoJT">
                     <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
+                  </a>
                 </div>
                 <div class="col-sm-6 col-12">
                   <br>
