--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -193,6 +193,8 @@
                   <a href="https://rzp.io/l/8Aw6js5">
                     <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                   </a>
+                    <br>
+                    <p>₹1500 for Level A1 Certification</p>
                 </div>
                 <div class="col-sm-6 col-12">
                   <br>
