--- a/courses/german.html
+++ b/courses/german.html
@@ -192,6 +192,8 @@
                   <a href="https://rzp.io/l/JisCoJT">
                     <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                   </a>
+                    <br>
+                    <p>₹1500 for Level A1 Certification</p>
                 </div>
                 <div class="col-sm-6 col-12">
                   <br>
