--- a/courses/lang.html
+++ b/courses/lang.html
@@ -114,7 +114,7 @@
                 <img class="card-img-top" src="../Assets/Images/frenchlogo.png" height="210px" alt="Card image cap">
                 <div class="card-body">
                     <h4 class="card-title">
-                        LearYuva's French Course.
+                        LearnYuva's French Course.
                     </h4>
                     <p class="card-text">
                         Learn the language of love and amazing culture & traditions.
