--- a/courses/german.html
+++ b/courses/german.html
@@ -207,8 +207,20 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 d-none d-md-block course-stats">
-                <h5>Course Progress Visuals Here</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam temporibus iste voluptatem quia voluptates? Ipsum culpa sit soluta neque sint facilis aperiam voluptates, ex quam voluptatum, quo mollitia error non.</p>
+              <h5>Course Features</h5>
+                <br>
+                <p>• SKill Level: All levels</p>
+                <hr>
+                <p>• Access on Mobile & PC</p>
+                <hr>
+                <p>• Language: English</p>
+                <hr>
+                <p>• Certificate of completion</p>
+                <hr>
+                <p>• Doubt Sessions</p>
+                <hr>
+                <p>• Live & Interactive classes</p>
+                <hr>
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5>There are 4 levels in this course</h5>
