--- a/courses/german.html
+++ b/courses/german.html
@@ -221,6 +221,8 @@
                 <hr>
                 <p>• Live & Interactive classes</p>
                 <hr>
+                <p>• Experienced Faculties</p>
+                <hr>
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5>There are 4 levels in this course</h5>
