--- a/courses/french.html
+++ b/courses/french.html
@@ -223,7 +223,7 @@
                 <hr>
                 <p>• Experienced Faculties</p>
                 <hr>
-                <p>• Duration: 2months/level</p>
+                <p>• Duration: 2 months/level</p>
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5>There are 4 levels in this course</h5>
