--- a/courses/robotics.html
+++ b/courses/robotics.html
@@ -206,7 +206,7 @@
     </div>
     
     <hr class="my-4 divider">
-    <div class="container">
+    <div class="container" style="opacity: 0.1;">
         <div class="row">
             <div class="col-md-3 d-none d-md-block course-stats">
                 <h5>Course Progress Visuals Here</h5>
