LearnYuva Join Us Button Added

--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@
             <div class="menu">
               <div class="item">
                 LogIn
-                
               </div>
               <div class="item">
                 SignUp
-                
               </div>
             </div>
           </div>
@@ -197,11 +195,18 @@
           </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-4 offset-sm-1 col-12">
+          <a class="btn btn-primary" href="/users/register">Join us & start learning</a>
+        </div>
+        <div class="col-sm-7">
+        </div>
+      </div>
     </div>
   </div>
   <!--Jumbotron End-->
 
-  <div class="container">
+  <div class="container" style="margin-top: 1%">
     <div class="heading">
       <h1 class="text-center">Our Specialities</h1>
       <hr class="my-4">
@@ -261,7 +266,7 @@
           <p class="text-left">
             Eliminate the concern of communication barrier in any foreign country by learning to speak various languages with ease.
           </p>
-            <br>
+          <br>
           <a href="courses/lang.html"><button type="button" class="btn btn-outline-primary">View Courses</button></a>
         </div>
       </div>
@@ -317,9 +322,9 @@
       <div class="row">
         <div class="col-12 my-auto">
           <div class="social text-center">
-            <a class="footer-link" href="https://www.facebook.com/learnyuva"><i class="fa-fw fab fa-facebook fa-lg"></i></a>
-            <a class="footer-link" href="https://www.instagram.com/learnyuva"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
-            <a class="footer-link" href="https://www.linkedin.com/company/learnyuva/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
+            <a class="footer-link" href="https://www.facebook.com/learnyuva"><i class="fab fa-facebook fa-2x"></i></a>
+            <a class="footer-link" href="https://www.instagram.com/learnyuva"><i class="fab fa-instagram fa-2x"></i></a>
+            <a class="footer-link" href="https://www.linkedin.com/company/learnyuva/"><i class="fab fa-linkedin fa-2x"></i></a>
           </div>
           <br>
         </div>
