--- a/courses/german.html
+++ b/courses/german.html
@@ -226,16 +226,22 @@
                 <p>• Duration: 2 months/level</p>
             </div>
             <div class="col-md-9 col-12 course-content">
-              <h5>There are 4 levels in this course</h5>
-                <br>
-                <h6>Level A1</h6>
-                <p>This level aims to teach everyone basics of German language which includes vocabulary & basic Grammar. After clearing this level student will be able to Give & ask Personal Info, give directions and speak in simple past and simple present tense.</p>
-                <h6>Level A2</h6>
-                <p>This second level will introduce students with more complex vocabulary of German language. After clearing this level student will be able to describe about objects and places, give advice, write about different types of texts, and talk about their feelings.</p>
-                <h6>Level B1</h6>
-                <p>This level will introduce students with core Grammar of German language. After clearing this level student will be able to describe and discuss about past and present, give instructions, talk on the phone, send messages and talk about future actions.</p>
-                <h6>Level B2</h6>
-                <p>This fourth level will introduce subjunctive, future tense and passive sentences. This is the final level after which students will showcase their mastery on german language.</p> 
+              <h5> Course Overview</h5>
+              <p>
+                • Get well versed in the art of making conversations in Deutsch.<br>
+                • Get fluent in German with 20 hours of live classes.<br>
+                • Get your doubts cleared with our faculty’s careful guidance. <br>
+                • Understand the works of German philosophers and scientists in their native language.<br>
+              </p>
+              <h5>Course Curriculum</h5>
+              <p>
+                1. Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc. <br>
+                2. To make your basics even stronger, you will learn how to describe a person, relation vocabulary. <br>
+                3. Learn the nomenclature of days, months and time and boost your confidence in the language. <br>
+                4. Learn German phrases in everyday life which will help you learn the language better.<br>
+                5. Periodic tests will help you strengthen your grip on the language. <br>
+                6. At the end of this eight-week course, your fluency in German will increase.<br>
+              </p>
             </div>
         </div>
     </div>
