--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -228,17 +228,23 @@
                 <p>• Duration: 2 months/level</p>
             </div>
             <div class="col-md-9 col-12 course-content">
-               <h5>There are 4 levels in this course</h5>
-                <br>
-                <h6>Level A1</h6>
-                <p>This level aims to teach everyone basics of Spanish language which includes vocabulary & basic Grammar. After clearing this level student will be able to Give & ask Personal Info, give directions and speak in simple past and simple present tense.</p>
-                <h6>Level A2</h6>
-                <p>This second level will introduce students with more complex vocabulary of Spanish language. After clearing this level student will be able to describe about objects and places, give advice, write about different types of texts, and talk about their feelings.</p>
-                <h6>Level B1</h6>
-                <p>This level will introduce students with core Grammar of Spanish language. After clearing this level student will be able to describe and discuss about past and present, give instructions, talk on the phone, send messages and talk about future actions.</p>
-                <h6>Level B2</h6>
-                <p>This fourth level will introduce subjunctive, future tense and passive sentences. This is the final level after which students will showcase their mastery on spanish language.</p> 
-                
+              <h5>Course Overview</h5>
+              <p>
+                • Familiarize yourself with basic conversational skills in Spanish. <br>
+                • Learn the lingua franca of Spain with 20 hours of live sessions.<br>
+                • Have your doubts answered by our experienced faculty.<br>
+                • Quench your thirst of knowledge and learn about the rich history of Spain. <br>
+              </p>
+              <h5>Course Curriculum</h5>
+              <p>
+                1.Learn the Spanish alphabets. <br>
+                2.Learn the proper use of Definite and Indefinite Articles. <br>
+                3.Understand the use of Demonstrative, Interrogative and Personal Pronouns better.<br>
+                4.Decipher the usage of present tense with basic verbs. <br>
+                5.Convey your needs better with the appropriate quantifiers.<br>
+                6.Speak fluently in Spanish keeping in mind the verbatim and vernacular. <br>
+                7.Rest assured in your knowledge of the language with periodic assessments and keep track of your progress.<br>
+              </p>
             </div>
         </div>
     </div>
