--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div class="card">
           <img src="Assets/Images/instructor.png" class="course-icon mx-auto" alt="live sessions">
           <br>
-          <p>10 hours of live and doubt solving sessions.</p>
+          <p>10 hours of live and doubt clearing sessions.</p>
         </div>
       </div>
       <hr class="divider d-block d-sm-none">
