--- a/courses/french.html
+++ b/courses/french.html
@@ -226,16 +226,23 @@
                 <p>• Duration: 2 months/level</p>
             </div>
             <div class="col-md-9 col-12 course-content">
-              <h5>There are 4 levels in this course</h5>
-                <br>
-                <h6>Level A1</h6>
-                <p>This level aims to teach everyone basics of French language which includes vocabulary & basic Grammar. After clearing this level student will be able to Give & ask Personal Info, give directions and speak in simple past and simple present tense.</p>
-                <h6>Level A2</h6>
-                <p>This second level will introduce students with more complex vocabulary of French language. After clearing this level student will be able to describe about objects and places, give advice, write about different types of texts, and talk about their feelings.</p>
-                <h6>Level B1</h6>
-                <p>This level will introduce students with core Grammar of French language. After clearing this level student will be able to describe and discuss about past and present, give instructions, talk on the phone, send messages and talk about future actions.</p>
-                <h6>Level B2</h6>
-                <p>This fourth level will introduce subjunctive, future tense and passive sentences. This is the final level after which students will showcase their mastery on french language.</p> 
+              <h5>Course Overview</h5>
+              <p>
+                • With 20 hours of live sessions, learn to make basic conversations in French.<br>
+                • Get acquainted with the French lexicon.<br>
+                • Clarify your doubts with our faculty’s careful assistance.<br>
+                • Understand the significance of the French Renaissance.<br>
+              </p>
+              <h5>Course Curriculum</h5>
+              <p>
+                1. Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.<br>
+                2. To make your basics stronger, the course will introduce verbs, both regular and irregular.   <br>
+                3. You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.<br>
+                4. To make you fluent in the language, you will be taught seasons, months, days of a week and time. <br>
+                5. Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.<br>
+                6. Formal topics like Email writing will also be brushed up.<br>
+                7. Weekly tests which will help you strengthen your grip of the language.<br>
+              </p>  
             </div>
         </div>
     </div>
