--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -211,7 +211,7 @@
             <div class="col-md-3 d-none d-md-block course-stats">
               <h5>Course Features</h5>
                 <br>
-                <p>• SKill Level: All levels</p>
+                <p>• Skill Level: All levels</p>
                 <hr>
                 <p>• Access on Mobile & PC</p>
                 <hr>
@@ -230,7 +230,7 @@
             <div class="col-md-9 col-12 course-content">
               <h5>Course Overview</h5>
               <p>
-                • Familiarize yourself with basic conversational skills in Spanish. <br>
+                • Familiarize yourself with basic conversational Skills in Spanish. <br>
                 • Learn the lingua franca of Spain with 20 hours of live sessions.<br>
                 • Have your doubts answered by our experienced faculty.<br>
                 • Quench your thirst of knowledge and learn about the rich history of Spain. <br>
