--- a/courses/web.html
+++ b/courses/web.html
@@ -187,7 +187,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Web-Development for Beginners</h2>
-                    <h6><p>Have you ever looked at a website and wondered how it was created? Well, look no further than our course. Learn to design websites both beautiful and complex, sites that are easy to navigate and a joy to peruse. Learn this invaluable skill with our online classes and careful guidance.
+                    <h6><p>Have you ever looked at a website and wondered how it was created? Well, look no further than our course. Learn to design websites both beautiful and complex, sites that are easy to navigate and a joy to peruse. Learn this invaluable Skill with our online classes and careful guidance.
                     </p></h6>
                   <br>
                     <button type="button" class="btn btn-primary btn-lg" disabled title ="This course is not available right now" >Enroll Now</button>
