--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
           <h3>Technical</h3>
           <p class="text-left">
-              Take a step towards advancement by acquiring the skills of Web Development, App Development and iOS Development and learn the languages of computers to be industry ready.
+              Take a step towards advancement by acquiring the Skills of Web Development, App Development and iOS Development and learn the languages of computers to be industry ready.
           </p>
             <br>
           <a href="courses/tech.html"><button type="button" class="btn btn-outline-primary">View Courses</button></a>
