--- a/courses/french.html
+++ b/courses/french.html
@@ -209,7 +209,7 @@
             <div class="col-md-3 d-none d-md-block course-stats">
               <h5>Course Features</h5>
                 <br>
-                <p>• SKill Level: All levels</p>
+                <p>• Skill Level: All levels</p>
                 <hr>
                 <p>• Access on Mobile & PC</p>
                 <hr>
