--- a/courses/python.html
+++ b/courses/python.html
@@ -186,7 +186,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Let's start coding in Python</h2>
-                    <h6><p>Want to learn the easiest method to interact with computers and learn their language? Commence this course on the 'glue' language to acquire your basic coding skills in the most interactive manner.
+                    <h6><p>Want to learn the easiest method to interact with computers and learn their language? Commence this course on the 'glue' language to acquire your basic coding Skills in the most interactive manner.
                     </p></h6>
                   <br>
                     <button type="button" class="btn btn-primary btn-lg" disabled title ="This course is not available right now" >Enroll Now</button>
